--- a/skripte/meta.tex
+++ b/skripte/meta.tex
@@ -3,46 +3,46 @@
 %-----------------------------------
 
 % Autor
-\newcommand{\myAutor}{Max Mustermann}
+\newcommand{\myAutor}{Alexsandar Petrov}
 
 % Adresse
-\newcommand{\myAdresse}{Heidestra\ss e 17 \\ \> \> 51147 Köln}
+\newcommand{\myAdresse}{Hordeler Stra\ss e 62 \\ \> \> 44809 Bochum}
 
 % Titel der Arbeit
-\newcommand{\myTitel}{LATEX-Vorlage - mit Biblatex}
+\newcommand{\myTitel}{Unterstützung von Informationsflüssen des Fahrdienstes in einem Nahverkehrsunternehmen durch ein Groupwaresystem - Eine Anforderungsanalyse}
 
 % Betreuer
-\newcommand{\myBetreuer}{Prof. Dr. Peter Lustig}
+\newcommand{\myBetreuer}{Dipl.-Wirtschaftsinf. Dr. Mike Heuser}
 
 % Lehrveranstaltung
-\newcommand{\myLehrveranstaltung}{Modul Nr. 1}
+\newcommand{\myLehrveranstaltung}{IT-Infrastruktur}
 
 % Matrikelnummer
-\newcommand{\myMatrikelNr}{123456}
+\newcommand{\myMatrikelNr}{423066}
 
 % Ort
-\newcommand{\myOrt}{Düsseldorf}
+\newcommand{\myOrt}{Essen}
 
 % Datum der Abgabe
-\newcommand{\myAbgabeDatum}{28. Februar 2014}
+\newcommand{\myAbgabeDatum}{21. Januar 2018}
 
 % Semesterzahl
-\newcommand{\mySemesterZahl}{7}
+\newcommand{\mySemesterZahl}{3}
 
 % Name der Hochschule
 \newcommand{\myHochschulName}{FOM Hochschule für Oekonomie \& Management Essen}
 
 % Standort der Hochschule
-\newcommand{\myHochschulStandort}{Standort Düsseldorf}
+\newcommand{\myHochschulStandort}{Standort Essen}
 
 % Studiengang
 \newcommand{\myStudiengang}{Wirtschaftsinformatik}
 
 % Art der Arbeit
-\newcommand{\myThesisArt}{Bachelor Thesis}
+\newcommand{\myThesisArt}{Seminararbeit}
 
 % Zu erlangender akademische Grad
 \newcommand{\myAkademischerGrad}{Bachelor of Science (B. Sc.)}
 
 % Firma
-\newcommand{\myFirma}{Mustermann GmbH}
+\newcommand{\myFirma}{Bogestra AG}
