--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -8,7 +8,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{fancyhdr}
 \usepackage{fancybox}
-\usepackage[a4paper, left=4cm, right=2cm, top=2.8cm, bottom=2.3cm]{geometry}
+\usepackage[a4paper, left=4cm, right=2cm, top=3cm, bottom=2cm]{geometry}
 \usepackage{graphicx}
 \usepackage{colortbl}
 \usepackage{array}
@@ -186,11 +186,11 @@ sortlocale=de]{biblatex}
 		\myStudiengang, \mySemesterZahl. Semester\\
 		\vspace{2cm}
 		\textbf{\myThesisArt}\\
-		\textbf{zur Erlangung des Grades eines}\\
-		\textbf{\myAkademischerGrad}\\
+		%\textbf{zur Erlangung des Grades eines}\\
+		%\textbf{\myAkademischerGrad}\\
 		% Oder für Hausarbeiten:
-		%\textbf{im Rahmen der Lehrveranstaltung}\\
-		%\textbf{\myLehrveranstaltung}\\
+		\textbf{im Rahmen der Lehrveranstaltung}\\
+		\textbf{\myLehrveranstaltung}\\
 		\vspace{2cm}
 		über das Thema\\
 		\Huge{\myTitel}\\
